       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.


In 0.10:
--------
  patchlevel 12:
       - new command "execute" for minicli (temporary solution until
         we finally get a real kcli)

  patchlevel 11:
       - session management for unamanged windows modified. Since this
         is a KDE special for applications like kfm, other programms
         make trouble (for example Netscape 4) (Needs current libkdecore!)
       - session management fix (Netscape 3 et. al.)
       - placement: transient windows always on the desktop of their parent
       - desktop placement fixed for withdraw-by-client windows
       - maximize/sticky fixed (bug with hidden buttons)
       - For modules: no kwm_win_change before kwm_win_add (hopefully)
       - menu button on first position also appears for transient windows
         (to keep the pretty miniicon visible)
  patchlevel 10:
       - internal changes to module registration. (Needs the newest
         libkdecore to work)
       - Alt-MouseButton fix: works regardless NumLock/Capslock now
       - correct cursorfont for Alt-RMB rsize and Alt-LMB move
       - fixed control/tab release
  patchlevel 9:
       - small fix for kwm modules
       - further qt-1.3 changes: with 1.3 the mouse sometimes hang
         for the global modal dialogs (session manager et. al.)
  patchlevel 8:
       - needs qt-1.3
       - for modules: 
            KWM_WIN_DESKTOP handling fixed
            KWM_DESKTOP_NAME_CHANGE and KWM_DESKTOP_NUMBER_CHANGE
       - some smaller improvements

  patchlevel 7:
       - improved KConfig handling (uses strlists :-)